little-view-fix

--- a/task-3/assignment_pandas.ipynb
+++ b/task-3/assignment_pandas.ipynb
@@ -177,8 +177,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T19:42:14.210433Z",
-     "start_time": "2025-10-24T19:42:14.186588Z"
+     "end_time": "2025-10-25T00:19:40.219801Z",
+     "start_time": "2025-10-25T00:19:39.991806Z"
     }
    },
    "source": [
@@ -189,13 +189,13 @@
     "              data[data['salary'] == '>50K']['age'].std())\n",
     "\n",
     "Message.print_message(\n",
-    "    f\"Cреднее значение и среднеквадратичное отклонение возраста тех, кто получает более 50K в год - {mean1:.2f} и {std1:.2f} соответственно.\",\n",
+    "    f\"Cреднее значение и среднеквадратичное отклонение возраста тех, кто получает более 50K в год - {mean1:.2f} и {std1:.2f}\",\n",
     "    Color.GREEN,\n",
     "    Color.LIGHT_WHITE\n",
     ")\n",
     "\n",
     "Message.print_message(\n",
-    "    f\"Cреднее значение и среднеквадратичное отклонение возраста тех, кто получает менее 50K в год - {mean2:.2f} и {std2:.2f} соответственно.\",\n",
+    "    f\"Cреднее значение и среднеквадратичное отклонение возраста тех, кто получает менее 50K в год - {mean2:.2f} и {std2:.2f}\",\n",
     "    Color.BLUE,\n",
     "    Color.LIGHT_WHITE\n",
     ")\n"
@@ -206,17 +206,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001B[1m\u001B[32m+-----------------------------------------------------------------------------------------------------------------------------+\u001B[0m\n",
-      "\u001B[1m\u001B[32m| \u001B[97m\u001B[1mCреднее значение и среднеквадратичное отклонение возраста тех, кто получает более 50K в год - 36.78 и 14.02 соответственно.\u001B[0m\u001B[32m |\u001B[0m\n",
-      "\u001B[1m\u001B[32m+-----------------------------------------------------------------------------------------------------------------------------+\u001B[0m\n",
+      "\u001B[1m\u001B[32m+-------------------------------------------------------------------------------------------------------------+\u001B[0m\n",
+      "\u001B[1m\u001B[32m| \u001B[97m\u001B[1mCреднее значение и среднеквадратичное отклонение возраста тех, кто получает более 50K в год - 36.78 и 14.02\u001B[0m\u001B[32m |\u001B[0m\n",
+      "\u001B[1m\u001B[32m+-------------------------------------------------------------------------------------------------------------+\u001B[0m\n",
       "\n",
-      "\u001B[1m\u001B[34m+-----------------------------------------------------------------------------------------------------------------------------+\u001B[0m\n",
-      "\u001B[1m\u001B[34m| \u001B[97m\u001B[1mCреднее значение и среднеквадратичное отклонение возраста тех, кто получает менее 50K в год - 44.25 и 10.52 соответственно.\u001B[0m\u001B[34m |\u001B[0m\n",
-      "\u001B[1m\u001B[34m+-----------------------------------------------------------------------------------------------------------------------------+\u001B[0m\n"
+      "\u001B[1m\u001B[34m+-------------------------------------------------------------------------------------------------------------+\u001B[0m\n",
+      "\u001B[1m\u001B[34m| \u001B[97m\u001B[1mCреднее значение и среднеквадратичное отклонение возраста тех, кто получает менее 50K в год - 44.25 и 10.52\u001B[0m\u001B[34m |\u001B[0m\n",
+      "\u001B[1m\u001B[34m+-------------------------------------------------------------------------------------------------------------+\u001B[0m\n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
