--- a/TASKS/task-3/assignment_numpy.ipynb
+++ b/TASKS/task-3/assignment_numpy.ipynb
@@ -13,22 +13,21 @@
    "id": "76b9c43b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T23:52:56.784032Z",
-     "start_time": "2025-10-24T23:52:56.778637Z"
+     "end_time": "2025-10-25T11:20:41.150878Z",
+     "start_time": "2025-10-25T11:20:18.926947Z"
     }
    },
    "source": [
     "from collections import Counter\n",
-    "import numpy as np\n",
     "from utils.design import *\n",
-    "from consts import NUMPY_CSV\n",
+    "from consts import NUMPY_CSV_PATH\n",
     "from scipy.spatial.distance import cdist\n",
     "import time\n",
     "import pandas as pd\n",
     "from utils.graphic.builder import Builder"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -810,12 +809,12 @@
    "id": "9681ebf2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T23:53:06.271119Z",
-     "start_time": "2025-10-24T23:53:06.239338Z"
+     "end_time": "2025-10-25T11:21:12.501732Z",
+     "start_time": "2025-10-25T11:21:12.474784Z"
     }
    },
    "source": [
-    "calorie_stats = np.loadtxt(NUMPY_CSV, delimiter=\",\")\n",
+    "calorie_stats = np.loadtxt(NUMPY_CSV_PATH, delimiter=\",\")\n",
     "\n",
     "Message.print_message('Количество калорий для различных марок хлопьев:', Color.GREEN, Color.LIGHT_WHITE)\n",
     "\n",
@@ -844,12 +843,12 @@
        "       110., 110.,  90., 110., 140., 100., 110., 110., 100., 100., 110.])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
