pre-commit-file

--- a/TASKS/task-3/assignment_numpy.ipynb
+++ b/TASKS/task-3/assignment_numpy.ipynb
@@ -19,12 +19,13 @@
    },
    "source": [
     "from collections import Counter\n",
-    "from utils.design import *\n",
-    "from consts import NUMPY_CSV_PATH\n",
+    "import numpy as np\n",
+    "from TASKS.utils.design import *\n",
+    "from TASKS.consts import NUMPY_CSV_PATH\n",
     "from scipy.spatial.distance import cdist\n",
     "import time\n",
     "import pandas as pd\n",
-    "from utils.graphic.builder import Builder"
+    "from TASKS.utils.graphic.builder import Builder"
    ],
    "outputs": [],
    "execution_count": 1
