--- a/TASKS/task-3/assignment_pandas.ipynb
+++ b/TASKS/task-3/assignment_pandas.ipynb
@@ -30,19 +30,19 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T19:44:39.122328Z",
-     "start_time": "2025-10-24T19:44:38.464165Z"
+     "end_time": "2025-10-25T11:21:33.993515Z",
+     "start_time": "2025-10-25T11:21:33.251617Z"
     }
    },
    "source": [
     "import pandas as pd\n",
-    "from utils.design import *\n",
-    "from consts import DF_CSV_PATH\n",
+    "from TASKS.utils.design import *\n",
+    "from TASKS.consts import DF_CSV_PATH\n",
     "\n",
     "data = pd.read_csv(DF_CSV_PATH)\n"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
